components/modalDescription/modalDescription.module.scss
@mixin flex-col($gap, $align, $justify){
    display: flex;
    flex-direction: column;
    align-items: $align;
    justify-content: $justify;
    gap: $gap;
}

@mixin flex-row($gap, $align, $justify){
    display: flex;
    flex-direction: row;
    align-items: $align;
    justify-content: $justify;
    gap: $gap;
}

@mixin default-cont(){
    width: 100vw;
    max-width: 1600px;
    padding: 5px 15px;
    justify-self: center;
}

@mixin center-all{
    display: flex;
    align-items: center;
    justify-content: center;
    justify-content: center;
    text-align: center
}


.modal {
    @include flex-col(0,center ,center );

    position: fixed;
    top: 0;

    width: 100vw;
    height: 100vh;

    transition: all ease 0.4s;
    z-index: 999;
    overflow-y: scroll;
    
    .innerContent {
        width: 100vw;
        min-height: 100%;
        max-width: 1600px;
        justify-self: center;
        
        padding: 10px 15px;
        
        background: var(--background-color);
        
        display: flex;
        flex-direction: column;
        gap: 0.4rem;

        @media (min-width: 900px) {
            display: grid;
            grid-template-columns: repeat(2, 1fr);
            align-items: center;
            justify-items: center;

            padding: 0 15px;
            gap: 2rem;
            
            height: 100vh;
            overflow: hidden;
        }

        .lowerInner {
            height: 100%;
            width: 100%;
            align-self: flex-start;
            
            padding: 40px 15px;

            display: flex;
            flex-direction: column;
            gap: 1rem;
            overflow-y: scroll;

            @media (max-width: 900px) {
                gap: 1rem;
                padding: 10px 0;
                height: fit-content;
                overflow: hidden;
            }
            
            .categoriesString{
                p{
                    font-weight: 300;
                    font-size: 1rem;
                    letter-spacing: 1px;
                }
            }

            h2 {
                font-weight: 600;
                font-size: 2rem;

                @media (max-width: 900px) {
                    font-weight: 500;
                    font-size: 1.4rem;
                }
            }
    
            .sku {
                font-weight: 300;
                font-size: 1rem;
                letter-spacing: 1px;
            }
    
            .priceBlock{
                @include flex-col(0,start ,space-between );
                font-size: 2rem;
                margin-top: 20px;
        
                .regular{
                    font-size: 2rem;
                    font-weight: 200;
                    background: transparent;
                    span {
                        text-decoration: line-through;
                        text-decoration-thickness:2px ;
                        background: transparent;
                    }
                }
        
                .sale {
                    font-size: 1.4rem;
                    font-weight: 600;
                    margin-bottom: -12px;
                    background: transparent;
                    color: var(--orange-color);
                }
            }
    
            .addToCartButton {
                margin-top: 1rem;
                
                button {
                    padding: 14px 15px;
                    border: none;
                    border-radius: 4px;
                    font-family: inherit;
                    font-size: 1rem;
                    box-shadow: var(--box-shadow);
                    transition: all 0.2s ease;
                    cursor: pointer;
        
                    background: var(--foreground-color);
                    color: var(--background-color);
        
                    &:hover{
                        box-shadow: var(--box-shadow-variant);
                    }
                }
            }
        
            h3{
                font-weight: 800;
                font-size: 1.8rem;
                color: var(--transparent-dark-color);
    
                margin: 2rem 0rem;
            }
    
            .generatedDescription {
                font-size: 1rem;
                font-weight: 300;
                line-height: 24px;
                letter-spacing: 1px;
            }
        }

        .upperInner {
            display: flex;
            flex-direction: column;
            gap: 2rem;

            align-self: flex-start;
            margin-top: 8rem;

            @media (max-width: 900px){
                margin-top: 2rem;
            }

            a {
                color: var(--blue-color);
                text-decoration: underline;
                font-size: 0.9rem;
                cursor: pointer;
            }
        }

        .closeButton {
            border: 1px solid var(--orange-color);
            border-radius: 50%;
            width: 30px;
            height: 30px;
            
            @media (min-width: 900px) {
                position: absolute;
                top:40px;
                left:80px;
            }
        }
    }
}

